brainstation/question1/app2/istio/app2-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app2-destinationrule
spec:
  host: app2
  subsets:
  - name: app2
    labels:
      app: app2
