brainstation/question1/app2/istio/app2-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app2-virtualservice
spec:
  hosts:
  - '*'
  gateways:
  - app2-gateway
  http:
  - route:
    - destination:
        host: app1
        subset: app1
